<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.13</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <packaging>pom</packaging>
    <modules>
        <module>aliyun-oss-spring-boot-autoconfigure</module>
        <module>aliyun-oss-spring-boot-starter</module>
        <module>common-utils-spring-boot-autoconfigure</module>
        <module>common-utils-spring-boot-starter</module>
        <module>microservice-security-spring-boot-autoconfigure</module>
        <module>microservice-security-spring-boot-starter</module>
        <module>public-pojo-spring-boot-autoconfigure</module>
        <module>public-pojo-spring-boot-starter</module>
        <module>db-table-spring-boot-autoconfigure</module>
        <module>db-table-spring-boot-starter</module>
        <module>web-client-spring-boot-autoconfigure</module>
        <module>web-client-spring-boot-starter</module>
        <module>gorse-sdk-spring-boot-autoconfigure</module>
        <module>gorse-sdk-spring-boot-starter</module>
    </modules>
    <groupId>com.guanshiyun</groupId>
    <artifactId>common-utils-cloud</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>common-utils-cloud</name>
    <description>common-utils-cloud</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <project-version>2025.0.0.0</project-version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <snapshotName>0.0.1-SNAPSHOT</snapshotName>
        <hutool.version>5.8.43</hutool.version>
<!--        <loadbalancer.version>4.2.1</loadbalancer.version>-->
        <jackson.version>2.19.2</jackson.version>
        <gson.version>2.13.2</gson.version>
        <lang3.version>3.20.0</lang3.version>
        <databind.version>2.21.1</databind.version>
        <maven.compiler.target>21</maven.compiler.target>
        <jjwt-impl.version>0.13.0</jjwt-impl.version>
        <sdk.oss.version>3.18.5</sdk.oss.version>
        <fastjson.version>2.0.61</fastjson.version>
        <jaxbr.version>2.3.9</jaxbr.version>
        <jaxbapi.version>2.3.1</jaxbapi.version>
        <jafx.version>1.1.1</jafx.version>
        <gorse.version>0.5.0</gorse.version>

    </properties>
    <repositories>
        <repository>
            <id>gorse-repository</id>
            <url>https://maven.pkg.github.com/zhenghaoz/gorse</url>
        </repository>
    </repositories>


    <dependencyManagement>

        <dependencies>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gorse</groupId>
                <artifactId>gorse-client</artifactId>
                <version>${gorse.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--      <dependency>-->
            <!--        <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--        <artifactId>jackson-databind</artifactId>-->
            <!--      </dependency>-->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${project-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>aliyun-spring-boot-dependencies</artifactId>
                <version>1.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${sdk.oss.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
    </dependencies>

</project>
